initial commit, passing data with protocols & delegates

--- a/Segue_passing_data_4/Base.lproj/Main.storyboard
+++ b/Segue_passing_data_4/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +13,120 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Segue_passing_data_4" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Ya-hC-QMt">
+                                <rect key="frame" x="67.5" y="306" width="240" height="54"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="35"/>
+                                <state key="normal" title="Pass It Forward">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="buttonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="B9K-Tx-ecN"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="yVi-19-vkt">
+                                <rect key="frame" x="16" y="236" width="343" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Gr-F0-yrQ">
+                                <rect key="frame" x="138" y="78" width="99" height="48"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="40"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sdr-HM-QL6">
+                                <rect key="frame" x="16" y="37" width="87" height="64"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="43"/>
+                                <state key="normal" title="💙"/>
+                                <connections>
+                                    <action selector="changeToBlue:" destination="BYZ-38-t0r" eventType="touchUpInside" id="lB4-1H-Khq"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.88307801969999999" green="0.16703855989999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="yVi-19-vkt" secondAttribute="trailing" constant="16" id="L52-zi-1DP"/>
+                            <constraint firstItem="Sdr-HM-QL6" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="17" id="QFf-n5-sto"/>
+                            <constraint firstItem="yVi-19-vkt" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="RFN-4m-vpq"/>
+                            <constraint firstItem="0Ya-hC-QMt" firstAttribute="top" secondItem="yVi-19-vkt" secondAttribute="bottom" constant="40" id="ZOP-yx-tfI"/>
+                            <constraint firstItem="yVi-19-vkt" firstAttribute="top" secondItem="4Gr-F0-yrQ" secondAttribute="bottom" constant="110" id="aUi-qT-lKV"/>
+                            <constraint firstItem="4Gr-F0-yrQ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="58" id="dNV-s5-pTn"/>
+                            <constraint firstItem="yVi-19-vkt" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="eG8-hG-09c"/>
+                            <constraint firstItem="Sdr-HM-QL6" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="id8-bo-q7C"/>
+                            <constraint firstItem="0Ya-hC-QMt" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ip5-QB-D7q"/>
+                            <constraint firstItem="4Gr-F0-yrQ" firstAttribute="leading" secondItem="Sdr-HM-QL6" secondAttribute="trailing" constant="35" id="kXK-fZ-JEr"/>
+                            <constraint firstItem="4Gr-F0-yrQ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="yWz-Tf-qmO"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="label" destination="4Gr-F0-yrQ" id="L5i-7F-kRT"/>
+                        <outlet property="textField" destination="yVi-19-vkt" id="Fd9-bv-Sex"/>
+                        <segue destination="LTd-GZ-1T1" kind="show" identifier="sendDataForwards" id="6ce-cj-Tgd"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="44" y="89.505247376311857"/>
+        </scene>
+        <!--Second View Controller-->
+        <scene sceneID="eN9-cf-m64">
+            <objects>
+                <viewController id="LTd-GZ-1T1" customClass="SecondViewController" customModule="Segue_passing_data_4" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="m6p-Fz-6AM">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Data Here" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="edV-kt-SIH">
+                                <rect key="frame" x="98" y="65" width="179.5" height="48"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="40"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9JS-sC-Fsq">
+                                <rect key="frame" x="16" y="233" width="343" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4cT-wM-4k9">
+                                <rect key="frame" x="107.5" y="318" width="160" height="48"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="30"/>
+                                <state key="normal" title="Pass It Back">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="sendDataBack:" destination="LTd-GZ-1T1" eventType="touchUpInside" id="Zsf-L4-QmB"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.10973914260000001" green="1" blue="0.042506656439999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="edV-kt-SIH" firstAttribute="centerX" secondItem="m6p-Fz-6AM" secondAttribute="centerX" id="5YT-eU-RzN"/>
+                            <constraint firstItem="9JS-sC-Fsq" firstAttribute="top" secondItem="edV-kt-SIH" secondAttribute="bottom" constant="120" id="7UZ-YP-Ws0"/>
+                            <constraint firstItem="edV-kt-SIH" firstAttribute="top" secondItem="gUO-0J-DAa" secondAttribute="top" constant="45" id="7zk-nZ-hzS"/>
+                            <constraint firstItem="9JS-sC-Fsq" firstAttribute="leading" secondItem="gUO-0J-DAa" secondAttribute="leading" constant="16" id="ENu-Ev-ZX2"/>
+                            <constraint firstItem="9JS-sC-Fsq" firstAttribute="centerX" secondItem="m6p-Fz-6AM" secondAttribute="centerX" id="H6Q-Q1-jju"/>
+                            <constraint firstItem="4cT-wM-4k9" firstAttribute="top" secondItem="9JS-sC-Fsq" secondAttribute="bottom" constant="55" id="I75-Ew-XOi"/>
+                            <constraint firstItem="4cT-wM-4k9" firstAttribute="centerX" secondItem="m6p-Fz-6AM" secondAttribute="centerX" id="qiW-MD-3mi"/>
+                            <constraint firstItem="gUO-0J-DAa" firstAttribute="trailing" secondItem="9JS-sC-Fsq" secondAttribute="trailing" constant="16" id="xVV-Kf-dvL"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="gUO-0J-DAa"/>
+                    </view>
+                    <connections>
+                        <outlet property="label" destination="edV-kt-SIH" id="7pg-hk-X9z"/>
+                        <outlet property="textField" destination="9JS-sC-Fsq" id="xDq-dh-fml"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="W11-yZ-Lfe" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="836" y="89.505247376311857"/>
         </scene>
     </scenes>
 </document>
